# xde-icons

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.in  README  README.in  README.md  README.md.in  RELEASE.md  RELEASE.md.in  THANKS  THANKS.in  TODO  TODO.in  autogen.sh  configure.ac  configure.sh  configure.template  index.md
src/: Makefile.am
src/icons/hicolor/scalable/apps/: .gitignore  makepngs
src/pixmaps/: .gitignore  AfterStep.xpm  gv.xpm  imagic.xpm  jwm.xpm  start-menu.xpm  window-above.xpm  window-below.xpm  window-border.xpm  window-close.xpm  window-command.xpm  window-focus.xpm  window-kill.xpm  window-lower.xpm  window-maximize-b.xpm  window-maximize-h.xpm  window-maximize-v.xpm  window-maximize.xpm  window-menu.xpm  window-minimize.xpm  window-move.xpm  window-normal.xpm  window-raise.xpm  window-resize.xpm  window-sendto-d.xpm  window-sendto-l.xpm  window-sendto-r.xpm  window-sendto-u.xpm  window-sendto.xpm  window-shade.xpm  window-snap.xpm  window-stick.xpm  window-titlebar.xpm  window-unmaximize-b.xpm  window-unmaximize-h.xpm  window-unmaximize-v.xpm  window-unmaximize.xpm  window-unminimize.xpm  window-unshade.xpm  window-unstick.xpm  (+1 more)
