
ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = nostdinc

dist_pixmaps_DATA = \
	src/pixmaps/AfterStep.xpm \
	src/pixmaps/archlinux-wm-fluxbox128x128.png \
	src/pixmaps/archlinux-wm-fluxbox16x16.png \
	src/pixmaps/archlinux-wm-fluxbox22x22.png \
	src/pixmaps/archlinux-wm-fluxbox24x24.png \
	src/pixmaps/archlinux-wm-fluxbox256x256.png \
	src/pixmaps/archlinux-wm-fluxbox32x32.png \
	src/pixmaps/archlinux-wm-fluxbox36x36.png \
	src/pixmaps/archlinux-wm-fluxbox48x48.png \
	src/pixmaps/archlinux-wm-fluxbox512x512.png \
	src/pixmaps/archlinux-wm-fluxbox64x64.png \
	src/pixmaps/archlinux-wm-fluxbox72x72.png \
	src/pixmaps/archlinux-wm-fluxbox96x96.png \
	src/pixmaps/archlinux-wm-openbox128x128.png \
	src/pixmaps/archlinux-wm-openbox16x16.png \
	src/pixmaps/archlinux-wm-openbox22x22.png \
	src/pixmaps/archlinux-wm-openbox32x32.png \
	src/pixmaps/archlinux-wm-openbox48x48.png \
	src/pixmaps/archlinux-wm-openbox56x56.png \
	src/pixmaps/archlinux-wm-openbox64x64.png \
	src/pixmaps/big-blackbox.xpm \
	src/pixmaps/blackbox_16x16.xpm \
	src/pixmaps/blackbox_22x22.xpm \
	src/pixmaps/blackbox_32x32.xpm \
	src/pixmaps/blackbox_48x48.xpm \
	src/pixmaps/blackbox.xpm \
	src/pixmaps/fvwm_clipped.png \
	src/pixmaps/fvwm_noback.png \
	src/pixmaps/fvwm.png \
	src/pixmaps/fvwm.xpm \
	src/pixmaps/jwm.png \
	src/pixmaps/jwm.xpm \
	src/pixmaps/lxde-icon.png \
	src/pixmaps/mini-blackbox.xpm \
	src/pixmaps/mini.fvwm.xpm \
	src/pixmaps/mini-start.xpm \
	src/pixmaps/mini-twm.xpm \
	src/pixmaps/pekwm_logo2.png \
	src/pixmaps/pekwm_logo.png \
	src/pixmaps/redhat-starthere.png \
	src/pixmaps/small-blackbox.xpm \
	src/pixmaps/start-menu.xpm \
	src/pixmaps/window-above.xpm \
	src/pixmaps/window-below.xpm \
	src/pixmaps/window-border.xpm \
	src/pixmaps/window-close.xpm \
	src/pixmaps/window-command.xpm \
	src/pixmaps/window-focus.xpm \
	src/pixmaps/window-kill.xpm \
	src/pixmaps/window-lower.xpm \
	src/pixmaps/WindowMaker.png \
	src/pixmaps/window-maximize-b.xpm \
	src/pixmaps/window-maximize-h.xpm \
	src/pixmaps/window-maximize-v.xpm \
	src/pixmaps/window-maximize.xpm \
	src/pixmaps/window-menu.xpm \
	src/pixmaps/window-minimize.xpm \
	src/pixmaps/window-move.xpm \
	src/pixmaps/window-raise.xpm \
	src/pixmaps/window-resize.xpm \
	src/pixmaps/window-sendto.xpm \
	src/pixmaps/window-shade.xpm \
	src/pixmaps/window-snap.xpm \
	src/pixmaps/window-stick.xpm \
	src/pixmaps/window-titlebar.xpm \
	src/pixmaps/window-unshade.xpm

EXTRA_DIST = \
	src/icons/hicolor/100x100/apps/xlogo.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-base.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-kde.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-twm.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/128x128/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/128x128/apps/arch-logo.png \
	src/icons/hicolor/128x128/apps/blackbox.png \
	src/icons/hicolor/128x128/apps/ctwm.png \
	src/icons/hicolor/128x128/apps/fluxbox.png \
	src/icons/hicolor/128x128/apps/fvwm.png \
	src/icons/hicolor/128x128/apps/GNUstep3D.png \
	src/icons/hicolor/128x128/apps/GNUstep.png \
	src/icons/hicolor/128x128/apps/jwm.png \
	src/icons/hicolor/128x128/apps/pekwm.png \
	src/icons/hicolor/128x128/apps/twm.png \
	src/icons/hicolor/128x128/apps/wmaker.png \
	src/icons/hicolor/128x128/apps/xlogo.png \
	src/icons/hicolor/16x16/actions/application-exit.png \
	src/icons/hicolor/16x16/actions/gnome-logout.png \
	src/icons/hicolor/16x16/actions/system-lock-screen.png \
	src/icons/hicolor/16x16/actions/system-log-out.png \
	src/icons/hicolor/16x16/actions/system-reboot.png \
	src/icons/hicolor/16x16/actions/system-shutdown.png \
	src/icons/hicolor/16x16/actions/system-suspend-hibernate.png \
	src/icons/hicolor/16x16/actions/system-suspend.png \
	src/icons/hicolor/16x16/actions/system-switch-user.png \
	src/icons/hicolor/16x16/actions/window-above.png \
	src/icons/hicolor/16x16/actions/window-below.png \
	src/icons/hicolor/16x16/actions/window-border.png \
	src/icons/hicolor/16x16/actions/window-close.png \
	src/icons/hicolor/16x16/actions/window-command.png \
	src/icons/hicolor/16x16/actions/window-focus.png \
	src/icons/hicolor/16x16/actions/window-kill.png \
	src/icons/hicolor/16x16/actions/window-lower.png \
	src/icons/hicolor/16x16/actions/window-maximize-b.png \
	src/icons/hicolor/16x16/actions/window-maximize-h.png \
	src/icons/hicolor/16x16/actions/window-maximize.png \
	src/icons/hicolor/16x16/actions/window-maximize-v.png \
	src/icons/hicolor/16x16/actions/window-menu.png \
	src/icons/hicolor/16x16/actions/window-minimize.png \
	src/icons/hicolor/16x16/actions/window-move.png \
	src/icons/hicolor/16x16/actions/window-raise.png \
	src/icons/hicolor/16x16/actions/window-resize.png \
	src/icons/hicolor/16x16/actions/window-sendto.png \
	src/icons/hicolor/16x16/actions/window-shade.png \
	src/icons/hicolor/16x16/actions/window-snap.png \
	src/icons/hicolor/16x16/actions/window-stick.png \
	src/icons/hicolor/16x16/actions/window-titlebar.png \
	src/icons/hicolor/16x16/actions/window-unshade.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-base.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-kde.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-twm.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/16x16/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/16x16/apps/arch-logo.png \
	src/icons/hicolor/16x16/apps/blackbox.png \
	src/icons/hicolor/16x16/apps/blackbox.xpm \
	src/icons/hicolor/16x16/apps/ctwm.png \
	src/icons/hicolor/16x16/apps/fluxbox.png \
	src/icons/hicolor/16x16/apps/fvwm-crystal.png \
	src/icons/hicolor/16x16/apps/fvwm.png \
	src/icons/hicolor/16x16/apps/gnome-logout.png \
	src/icons/hicolor/16x16/apps/gnome-session-halt.png \
	src/icons/hicolor/16x16/apps/gnome-session-hibernate.png \
	src/icons/hicolor/16x16/apps/gnome-session-logout.png \
	src/icons/hicolor/16x16/apps/gnome-session-reboot.png \
	src/icons/hicolor/16x16/apps/gnome-session-sleep.png \
	src/icons/hicolor/16x16/apps/gnome-session-suspend.png \
	src/icons/hicolor/16x16/apps/gnome-session-switch.png \
	src/icons/hicolor/16x16/apps/GNUstep3D.png \
	src/icons/hicolor/16x16/apps/GNUstep.png \
	src/icons/hicolor/16x16/apps/icewm.png \
	src/icons/hicolor/16x16/apps/jwm.png \
	src/icons/hicolor/16x16/apps/pekwm.png \
	src/icons/hicolor/16x16/apps/start-here.png \
	src/icons/hicolor/16x16/apps/twm.png \
	src/icons/hicolor/16x16/apps/WindowMaker.png \
	src/icons/hicolor/16x16/apps/wmaker.png \
	src/icons/hicolor/16x16/apps/xlogo.png \
	src/icons/hicolor/192x192/apps/start-here.png \
	src/icons/hicolor/192x192/apps/xlogo.png \
	src/icons/hicolor/22x22/actions/application-exit.png \
	src/icons/hicolor/22x22/actions/gnome-logout.png \
	src/icons/hicolor/22x22/actions/gnome-session-halt.png \
	src/icons/hicolor/22x22/actions/gnome-session-hibernate.png \
	src/icons/hicolor/22x22/actions/gnome-session-logout.png \
	src/icons/hicolor/22x22/actions/gnome-session-reboot.png \
	src/icons/hicolor/22x22/actions/gnome-session-suspend.png \
	src/icons/hicolor/22x22/actions/gnome-session-switch.png \
	src/icons/hicolor/22x22/actions/system-lock-screen.png \
	src/icons/hicolor/22x22/actions/system-log-out.png \
	src/icons/hicolor/22x22/actions/system-reboot.png \
	src/icons/hicolor/22x22/actions/system-shutdown.png \
	src/icons/hicolor/22x22/actions/system-suspend-hibernate.png \
	src/icons/hicolor/22x22/actions/system-suspend.png \
	src/icons/hicolor/22x22/actions/system-switch-user.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-base.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-kde.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-twm.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/22x22/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/22x22/apps/arch-logo.png \
	src/icons/hicolor/22x22/apps/blackbox.png \
	src/icons/hicolor/22x22/apps/blackbox.xpm \
	src/icons/hicolor/22x22/apps/ctwm.png \
	src/icons/hicolor/22x22/apps/fluxbox.png \
	src/icons/hicolor/22x22/apps/fvwm-crystal.png \
	src/icons/hicolor/22x22/apps/fvwm.png \
	src/icons/hicolor/22x22/apps/gnome-logout.png \
	src/icons/hicolor/22x22/apps/gnome-session-halt.png \
	src/icons/hicolor/22x22/apps/gnome-session-hibernate.png \
	src/icons/hicolor/22x22/apps/gnome-session-logout.png \
	src/icons/hicolor/22x22/apps/gnome-session-reboot.png \
	src/icons/hicolor/22x22/apps/gnome-session-sleep.png \
	src/icons/hicolor/22x22/apps/gnome-session-suspend.png \
	src/icons/hicolor/22x22/apps/gnome-session-switch.png \
	src/icons/hicolor/22x22/apps/GNUstep3D.png \
	src/icons/hicolor/22x22/apps/GNUstep.png \
	src/icons/hicolor/22x22/apps/jwm.png \
	src/icons/hicolor/22x22/apps/pekwm.png \
	src/icons/hicolor/22x22/apps/twm.png \
	src/icons/hicolor/22x22/apps/wmaker.png \
	src/icons/hicolor/22x22/apps/xlogo.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-base.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-kde.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-twm.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/24x24/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/24x24/apps/arch-logo.png \
	src/icons/hicolor/24x24/apps/blackbox.png \
	src/icons/hicolor/24x24/apps/ctwm.png \
	src/icons/hicolor/24x24/apps/fluxbox.png \
	src/icons/hicolor/24x24/apps/fvwm.png \
	src/icons/hicolor/24x24/apps/gnome-session-halt.png \
	src/icons/hicolor/24x24/apps/gnome-session-hibernate.png \
	src/icons/hicolor/24x24/apps/gnome-session-reboot.png \
	src/icons/hicolor/24x24/apps/gnome-session-sleep.png \
	src/icons/hicolor/24x24/apps/gnome-session-suspend.png \
	src/icons/hicolor/24x24/apps/gnome-session-switch.png \
	src/icons/hicolor/24x24/apps/GNUstep3D.png \
	src/icons/hicolor/24x24/apps/GNUstep.png \
	src/icons/hicolor/24x24/apps/jwm.png \
	src/icons/hicolor/24x24/apps/pekwm.png \
	src/icons/hicolor/24x24/apps/twm.png \
	src/icons/hicolor/24x24/apps/wmaker.png \
	src/icons/hicolor/24x24/apps/xlogo.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/256x256/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/256x256/apps/GNUstep3D.png \
	src/icons/hicolor/256x256/apps/GNUstep.png \
	src/icons/hicolor/256x256/apps/xlogo.png \
	src/icons/hicolor/32x32/actions/application-exit.png \
	src/icons/hicolor/32x32/actions/system-lock-screen.png \
	src/icons/hicolor/32x32/actions/system-log-out.png \
	src/icons/hicolor/32x32/actions/system-reboot.png \
	src/icons/hicolor/32x32/actions/system-shutdown.png \
	src/icons/hicolor/32x32/actions/system-suspend-hibernate.png \
	src/icons/hicolor/32x32/actions/system-suspend.png \
	src/icons/hicolor/32x32/actions/system-switch-user.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-base.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-kde.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-twm.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/32x32/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/32x32/apps/arch-logo.png \
	src/icons/hicolor/32x32/apps/blackbox.png \
	src/icons/hicolor/32x32/apps/blackbox.xpm \
	src/icons/hicolor/32x32/apps/ctwm.png \
	src/icons/hicolor/32x32/apps/fluxbox.png \
	src/icons/hicolor/32x32/apps/fvwm-crystal.png \
	src/icons/hicolor/32x32/apps/fvwm.png \
	src/icons/hicolor/32x32/apps/gnome-logout.png \
	src/icons/hicolor/32x32/apps/gnome-session-halt.png \
	src/icons/hicolor/32x32/apps/gnome-session-hibernate.png \
	src/icons/hicolor/32x32/apps/gnome-session-logout.png \
	src/icons/hicolor/32x32/apps/gnome-session-reboot.png \
	src/icons/hicolor/32x32/apps/gnome-session-sleep.png \
	src/icons/hicolor/32x32/apps/gnome-session-suspend.png \
	src/icons/hicolor/32x32/apps/gnome-session-switch.png \
	src/icons/hicolor/32x32/apps/GNUstep3D.png \
	src/icons/hicolor/32x32/apps/GNUstep.png \
	src/icons/hicolor/32x32/apps/icewm.png \
	src/icons/hicolor/32x32/apps/jwm.png \
	src/icons/hicolor/32x32/apps/pekwm.png \
	src/icons/hicolor/32x32/apps/twm.png \
	src/icons/hicolor/32x32/apps/WindowMaker.png \
	src/icons/hicolor/32x32/apps/wmaker.png \
	src/icons/hicolor/32x32/apps/xclock.png \
	src/icons/hicolor/32x32/apps/xlogo.png \
	src/icons/hicolor/36x36/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/36x36/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/36x36/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/36x36/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/36x36/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/36x36/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/36x36/apps/fvwm.png \
	src/icons/hicolor/36x36/apps/GNUstep3D.png \
	src/icons/hicolor/36x36/apps/GNUstep.png \
	src/icons/hicolor/36x36/apps/jwm.png \
	src/icons/hicolor/36x36/apps/pekwm.png \
	src/icons/hicolor/36x36/apps/twm.png \
	src/icons/hicolor/36x36/apps/xlogo.png \
	src/icons/hicolor/48x48/actions/application-exit.png \
	src/icons/hicolor/48x48/actions/gnome-logout.png \
	src/icons/hicolor/48x48/actions/gnome-session-halt.png \
	src/icons/hicolor/48x48/actions/gnome-session-hibernate.png \
	src/icons/hicolor/48x48/actions/gnome-session-logout.png \
	src/icons/hicolor/48x48/actions/gnome-session-reboot.png \
	src/icons/hicolor/48x48/actions/gnome-session-suspend.png \
	src/icons/hicolor/48x48/actions/gnome-session-switch.png \
	src/icons/hicolor/48x48/actions/PadlockClosed.png \
	src/icons/hicolor/48x48/actions/PadlockOpen.png \
	src/icons/hicolor/48x48/actions/system-lock-screen.png \
	src/icons/hicolor/48x48/actions/system-log-out.png \
	src/icons/hicolor/48x48/actions/system-reboot.png \
	src/icons/hicolor/48x48/actions/system-shutdown.png \
	src/icons/hicolor/48x48/actions/system-suspend-hibernate.png \
	src/icons/hicolor/48x48/actions/system-suspend.png \
	src/icons/hicolor/48x48/actions/system-switch-user.png \
	src/icons/hicolor/48x48/apps/AfterStep2.png \
	src/icons/hicolor/48x48/apps/AfterStep.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-base.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-kde.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-twm.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/48x48/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/48x48/apps/arch-logo.png \
	src/icons/hicolor/48x48/apps/blackbox.png \
	src/icons/hicolor/48x48/apps/blackbox.xpm \
	src/icons/hicolor/48x48/apps/ctwm.png \
	src/icons/hicolor/48x48/apps/fluxbox.png \
	src/icons/hicolor/48x48/apps/fvwm-crystal.png \
	src/icons/hicolor/48x48/apps/fvwm.png \
	src/icons/hicolor/48x48/apps/gnome-logout.png \
	src/icons/hicolor/48x48/apps/gnome-session-halt.png \
	src/icons/hicolor/48x48/apps/gnome-session-hibernate.png \
	src/icons/hicolor/48x48/apps/gnome-session-logout.png \
	src/icons/hicolor/48x48/apps/gnome-session-reboot.png \
	src/icons/hicolor/48x48/apps/gnome-session-suspend.png \
	src/icons/hicolor/48x48/apps/gnome-session-switch.png \
	src/icons/hicolor/48x48/apps/GNUStep3D.png \
	src/icons/hicolor/48x48/apps/GNUstep3D.png \
	src/icons/hicolor/48x48/apps/GNUStepGlow.png \
	src/icons/hicolor/48x48/apps/GNUStep.png \
	src/icons/hicolor/48x48/apps/GNUstep.png \
	src/icons/hicolor/48x48/apps/icewm.png \
	src/icons/hicolor/48x48/apps/jwm.png \
	src/icons/hicolor/48x48/apps/pekwm.png \
	src/icons/hicolor/48x48/apps/twm.png \
	src/icons/hicolor/48x48/apps/WindowMaker.png \
	src/icons/hicolor/48x48/apps/wmaker.png \
	src/icons/hicolor/48x48/apps/XApp.png \
	src/icons/hicolor/48x48/apps/xclock.png \
	src/icons/hicolor/48x48/apps/xlogo.png \
	src/icons/hicolor/48x48/apps/XWindow2.png \
	src/icons/hicolor/48x48/apps/XWindow3.png \
	src/icons/hicolor/48x48/apps/XWindow.png \
	src/icons/hicolor/48x48/devices/chip.png \
	src/icons/hicolor/48x48/devices/ExpansionCard.png \
	src/icons/hicolor/48x48/devices/Harddrive.png \
	src/icons/hicolor/48x48/devices/Memory.png \
	src/icons/hicolor/48x48/devices/Notebook.png \
	src/icons/hicolor/48x48/devices/PLIP.png \
	src/icons/hicolor/48x48/devices/plip.png \
	src/icons/hicolor/48x48/devices/USB.png \
	src/icons/hicolor/48x48/status/aptdaemon-add.png \
	src/icons/hicolor/48x48/status/aptdaemon-cleanup.png \
	src/icons/hicolor/48x48/status/aptdaemon-delete.png \
	src/icons/hicolor/48x48/status/aptdaemon-download.png \
	src/icons/hicolor/48x48/status/aptdaemon-resolve.png \
	src/icons/hicolor/48x48/status/aptdaemon-update-cache.png \
	src/icons/hicolor/48x48/status/aptdaemon-upgrade.png \
	src/icons/hicolor/48x48/status/aptdaemon-wait.png \
	src/icons/hicolor/48x48/status/aptdaemon-working.png \
	src/icons/hicolor/512x512/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/512x512/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/512x512/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/512x512/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/512x512/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/512x512/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/512x512/apps/GNUstep3D.png \
	src/icons/hicolor/512x512/apps/GNUstep.png \
	src/icons/hicolor/512x512/apps/xlogo.png \
	src/icons/hicolor/56x56/apps/AfterStep3.png \
	src/icons/hicolor/56x56/apps/AfterStep4.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-base.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-kde.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-twm.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/56x56/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/56x56/apps/arch-logo.png \
	src/icons/hicolor/56x56/apps/blackbox.png \
	src/icons/hicolor/56x56/apps/ctwm.png \
	src/icons/hicolor/56x56/apps/fluxbox.png \
	src/icons/hicolor/56x56/apps/GNUstep3D.png \
	src/icons/hicolor/56x56/apps/GNUstep.png \
	src/icons/hicolor/56x56/apps/jwm.png \
	src/icons/hicolor/56x56/apps/pekwm.png \
	src/icons/hicolor/56x56/apps/start-here.png \
	src/icons/hicolor/56x56/apps/twm.png \
	src/icons/hicolor/56x56/apps/wmaker.png \
	src/icons/hicolor/56x56/apps/xlogo.png \
	src/icons/hicolor/56x56/devices/Computer.png \
	src/icons/hicolor/56x56/devices/Harddrive2.png \
	src/icons/hicolor/64x64/actions/application-exit.png \
	src/icons/hicolor/64x64/actions/system-lock-screen.png \
	src/icons/hicolor/64x64/actions/system-log-out.png \
	src/icons/hicolor/64x64/actions/system-reboot.png \
	src/icons/hicolor/64x64/actions/system-shutdown.png \
	src/icons/hicolor/64x64/actions/system-suspend-hibernate.png \
	src/icons/hicolor/64x64/actions/system-suspend.png \
	src/icons/hicolor/64x64/actions/system-switch-user.png \
	src/icons/hicolor/64x64/apps/allin1.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-base.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-kde.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-twm.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/64x64/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/64x64/apps/arch-logo.png \
	src/icons/hicolor/64x64/apps/blackbox.png \
	src/icons/hicolor/64x64/apps/ctwm.png \
	src/icons/hicolor/64x64/apps/fluxbox.png \
	src/icons/hicolor/64x64/apps/fvwm.png \
	src/icons/hicolor/64x64/apps/gnome-logout.png \
	src/icons/hicolor/64x64/apps/gnome-session-halt.png \
	src/icons/hicolor/64x64/apps/gnome-session-hibernate.png \
	src/icons/hicolor/64x64/apps/gnome-session-logout.png \
	src/icons/hicolor/64x64/apps/gnome-session-reboot.png \
	src/icons/hicolor/64x64/apps/gnome-session-suspend.png \
	src/icons/hicolor/64x64/apps/gnome-session-switch.png \
	src/icons/hicolor/64x64/apps/GNUstep3D.png \
	src/icons/hicolor/64x64/apps/GNUstep.png \
	src/icons/hicolor/64x64/apps/jwm.png \
	src/icons/hicolor/64x64/apps/pekwm.png \
	src/icons/hicolor/64x64/apps/start-here.png \
	src/icons/hicolor/64x64/apps/twm.png \
	src/icons/hicolor/64x64/apps/wmaker.png \
	src/icons/hicolor/64x64/apps/xclock.png \
	src/icons/hicolor/64x64/apps/xlogo.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-base.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-kde.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-twm.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/72x72/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/72x72/apps/arch-logo.png \
	src/icons/hicolor/72x72/apps/blackbox.png \
	src/icons/hicolor/72x72/apps/ctwm.png \
	src/icons/hicolor/72x72/apps/fluxbox.png \
	src/icons/hicolor/72x72/apps/GNUstep3D.png \
	src/icons/hicolor/72x72/apps/GNUstep.png \
	src/icons/hicolor/72x72/apps/jwm.png \
	src/icons/hicolor/72x72/apps/pekwm.png \
	src/icons/hicolor/72x72/apps/twm.png \
	src/icons/hicolor/72x72/apps/wmaker.png \
	src/icons/hicolor/72x72/apps/xlogo.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-awesome.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-base.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-blackbox.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-dwm.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-fluxbox.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-fvwm.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-gnome.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-icewm.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-jwm.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-kde2.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-kdemod.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-kde.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-openbox.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-pekwm.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-twm.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-wmaker.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-xfce.png \
	src/icons/hicolor/96x96/apps/archlinux-wm-xmonad.png \
	src/icons/hicolor/96x96/apps/arch-logo.png \
	src/icons/hicolor/96x96/apps/blackbox.png \
	src/icons/hicolor/96x96/apps/ctwm.png \
	src/icons/hicolor/96x96/apps/fluxbox.png \
	src/icons/hicolor/96x96/apps/GNUstep3D.png \
	src/icons/hicolor/96x96/apps/GNUstep.png \
	src/icons/hicolor/96x96/apps/jwm.png \
	src/icons/hicolor/96x96/apps/pekwm.png \
	src/icons/hicolor/96x96/apps/twm.png \
	src/icons/hicolor/96x96/apps/wmaker.png \
	src/icons/hicolor/96x96/apps/xlogo.png \
	src/icons/hicolor/scalable/actions/unexicon-new.svg \
	src/icons/hicolor/scalable/actions/window-close2.svg \
	src/icons/hicolor/scalable/actions/window-close.svg \
	src/icons/hicolor/scalable/actions/window-kill2.svg \
	src/icons/hicolor/scalable/actions/window-kill.svg \
	src/icons/hicolor/scalable/actions/window-maximize2.svg \
	src/icons/hicolor/scalable/actions/window-maximize-b2.svg \
	src/icons/hicolor/scalable/actions/window-maximize-b.svg \
	src/icons/hicolor/scalable/actions/window-maximize-h2.svg \
	src/icons/hicolor/scalable/actions/window-maximize-h.svg \
	src/icons/hicolor/scalable/actions/window-maximize.svg \
	src/icons/hicolor/scalable/actions/window-maximize-v2.svg \
	src/icons/hicolor/scalable/actions/window-maximize-v.svg \
	src/icons/hicolor/scalable/actions/window-minimize2.svg \
	src/icons/hicolor/scalable/actions/window-minimize.svg \
	src/icons/hicolor/scalable/actions/window-move.svg \
	src/icons/hicolor/scalable/actions/window-resize.svg \
	src/icons/hicolor/scalable/actions/window-sendto.svg \
	src/icons/hicolor/scalable/actions/window-shade2.svg \
	src/icons/hicolor/scalable/actions/window-shade.svg \
	src/icons/hicolor/scalable/actions/window-stick.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-awesome.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-base.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-blackbox.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-dwm.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-fluxbox.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-fvwm.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-gnome.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-icewm.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-jwm.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-kde2.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-kdemod.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-kde.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-openbox.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-pekwm.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-twm.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-wmaker.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-xfce.svg \
	src/icons/hicolor/scalable/apps/archlinux-wm-xmonad.svg \
	src/icons/hicolor/scalable/apps/arch-logo.svg \
	src/icons/hicolor/scalable/apps/blackbox.svg \
	src/icons/hicolor/scalable/apps/ctwm.svg \
	src/icons/hicolor/scalable/apps/fluxbox.svg \
	src/icons/hicolor/scalable/apps/GNUstep.svg \
	src/icons/hicolor/scalable/apps/jwm.svg \
	src/icons/hicolor/scalable/apps/makepngs \
	src/icons/hicolor/scalable/apps/pekwm.svg \
	src/icons/hicolor/scalable/apps/twm.svg \
	src/icons/hicolor/scalable/apps/wmaker.svg \
	src/icons/hicolor/scalable/apps/xlogo.svg \
	src/icons/Mist/16x16/apps/start-here.png \
	src/icons/Mist/192x192/apps/start-here.png \
	src/icons/Mist/64x64/apps/start-here.png

install-data-hook: $(EXTRA_DIST)
	for f in $(EXTRA_DIST) ; do \
		d=`echo $$f | sed 's,src/icons/,$(DESTDIR)$(datadir)/icons/,'` ; \
		install -Dm644 $(srcdir)/$$f $$d ; \
	done
